--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,13 @@ h1,h2,h3,h4{
 }
 @font-face {
 	font-family: 'Montserrat';
+	src: url('../src/fonts/Montserrat-Medium.woff2') format('woff2'), url('../src/fonts/Montserrat-Medium.woff') format('woff');
+	font-weight: 500;
+	font-style: normal;
+    font-display: swap;
+}
+@font-face {
+	font-family: 'Montserrat';
 	src: url('../src/fonts/Montserrat-Bold.woff2') format('woff2'), url('../src/fonts/Montserrat-Bold.wofff') format('woff');
 	font-weight: 700;
 	font-style: normal;
@@ -69,15 +76,29 @@ h1,h2,h3,h4{
     font-size: 40px;
     font-weight: bold;
 }
+button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
+  }
 
 .main_btn{
+    display: inline-block;
     padding: 0 20px;
     max-width: 217px;
     white-space: nowrap;
     height: 40px;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
     background-color: #f70b5a;
     transition: background-color .3s, color .3s;
     position: relative;
+    line-height: 40px;
+    font-weight: 700;
     overflow: hidden;
     z-index: 1;
 }
@@ -291,7 +312,7 @@ h1,h2,h3,h4{
     
 }
 .banner_section{
-    background: url(../banner/banner_one.webp) no-repeat;
+    background: url(../src/img/banner_one.webp) no-repeat;
     height: 532px;
     width: 100%;
     background-size: cover;
@@ -306,7 +327,6 @@ h1,h2,h3,h4{
     background-color: #edf7ff;
     color: #66b3e2;
     text-transform: uppercase;
-    font-weight: 900;
     padding: 16px 30px;
     cursor: auto;
     top: 53px;
@@ -316,8 +336,20 @@ h1,h2,h3,h4{
     transition: transform .35s;
     gap: 20px;
 }
+.dropdown-menu .submenu_title{
+    font-weight: 700;
+}
+.dropdown-menu ul li::after{
+    content: '';
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: #66b3e2;
+    margin-top: 6px;
+}
 .dropdown-submenu li a{
     padding-right: 0;
+    font-weight: 400;
 }
 .nav_item_hover{
     position: relative;
@@ -382,7 +414,7 @@ h1,h2,h3,h4{
 }
 .item_circle span{
     font-size: 21px;
-    font-weight: 600;
+    font-weight: 700;
 }
 .img-circle{
     display: flex;
@@ -393,7 +425,141 @@ h1,h2,h3,h4{
     border: 2px solid #ed0050;
     border-radius: 50%;
     border-style: dotted;
+    margin-bottom: 30px;
 }
+
+/* product-card */
+.product_card_section{
+    padding: 60px 0;
+}
+.wrapp_product_tab{
+    padding: 60px 0 0;
+}
+.tab_product_card{
+    display: flex;
+    justify-content: space-between;
+}
+.product_item_circle{
+    width: 120px;
+    cursor: pointer;
+}
+.tab_circle{
+    overflow: hidden;
+    border-style: solid;
+    max-width: 90px;
+    max-height: 90px;
+    border: 2px solid #00507f;
+    margin-bottom: 15px;
+}
+.tab_circle .stroke{
+    border-radius: 50%;
+    overflow: hidden;
+    max-width: 84px;
+    max-height: 84px;
+}
+.product_name{
+    text-transform: uppercase;
+    color: #00507f;
+    font-size: 16px !important;
+    letter-spacing: -1px;
+    font-weight: 500 !important;
+    white-space: nowrap;
+}
+.tab_circle .stroke img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.block_descr_product_card{
+    display: flex;
+    margin-top: 60px;
+}
+.title_product_flex{
+    display: flex;
+    justify-content: space-between;
+}
+.block_descr_product_card .section_title{
+    text-align: left;
+    font-size: 21px;
+}
+.pruduct_photo{
+    min-width: 460px;
+    max-height: 400px;
+    cursor: pointer;
+}
+.pruduct_photo img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.product_descr{
+    padding-left: 30px;
+}
+.product-card_label{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    text-align: center;
+    color: #00507f;
+    font-weight: 700;
+    white-space: nowrap;
+    letter-spacing: -1px;
+}
+.product-card_label .sale_one{
+    background-color: #ffe200;
+    max-width: 210px;
+    padding: 5px 12px;
+    margin-bottom: 5px;
+}
+.product-card_label .sale_two{
+    background-color: #66b3e2;
+    max-width: 125px;
+    padding: 5px 12px;
+}
+.text_descr{
+    margin: 30px 0;
+}
+.product-card_price{
+    font-size: 21px;
+    font-weight: 700;
+    margin-bottom: 35px;
+}
+.product-card_new-price{
+    color: #ed0050;
+}
+/* end product-card */
+
+/* calc-section */
+.calc-content{
+    background-color: #66b3e2;
+    padding: 60px 45px;
+}
+.calc_container_form{
+    display: flex;
+    justify-content: space-around;
+}
+.col_form{
+    display: flex;
+    flex-direction: column;
+}
+.final_price{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #00507f;
+    color: #fff;
+    font-weight: 500;
+    padding: 25px 0;
+}
+.final_price_title{
+    font-size: 21px;
+}
+.final_sum{
+    font-size: 28px;
+}
+/* end calc-section */
 
 
 
