--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,35 @@ ul,li{
 h1,h2,h3,h4{
     font-size: 100%;
 }
+h3{
+    font-size: 21px;
+}
+select{
+    /* -moz-appearance: none; */
+    -webkit-appearance: none;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    outline: none;
+    font-size: 18px;
+    padding: 5px;
+    padding-right: 40px;
+}
+select option:hover{
+    background-color: #7f0015;
+}
+input{
+    border: none;
+    position: relative;
+    outline: none;
+    font-size: 18px;
+}
+option{
+    cursor: pointer;
+}
+option:hover{
+   background-color: #00507f;
+}
 @font-face {
 	font-family: 'Montserrat';
 	src: url('../src/fonts/Montserrat-Regular.woff2') format('woff2'), url('../src/fonts/Montserrat-Regular.woff') format('woff');
@@ -539,9 +568,29 @@ button {
     display: flex;
     justify-content: space-around;
 }
+.calc_form .section_title{
+    margin-bottom: 60px;
+}
+.calc_form h3{
+    color: #000000;
+}
+.calc_form label{
+    margin-bottom: 7px;
+    font-weight: 500;
+}
 .col_form{
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+.col_two_form{
+    margin-top: 95px;
+}
+.title_info{
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 21px;
+    margin-bottom: 25px;
 }
 .final_price{
     display: flex;
@@ -551,7 +600,8 @@ button {
     background-color: #00507f;
     color: #fff;
     font-weight: 500;
-    padding: 25px 0;
+    padding: 25px 25px;
+    margin-top: 30px;
 }
 .final_price_title{
     font-size: 21px;
@@ -559,6 +609,86 @@ button {
 .final_sum{
     font-size: 28px;
 }
+.form_group{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-bottom: 25px;
+}
+.form_group .form_control{
+    height: 30px;
+    width: 200px;
+    padding: 0 10px;
+}
+.form_group select{
+    height: 30px;
+    width: 220px;
+}
+.select_wrapper{
+    display: flex;
+    align-items: center;
+    position: relative;
+    max-width: 220px;
+}
+
+.button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
+    background-color: #00507f;
+    position: absolute;
+    right: 2px;
+    cursor: pointer;
+    z-index: 1;
+}
+.button::after{
+    content: '';
+    /* position: absolute; */
+    display: block;
+    border-bottom: 2px solid #fff;
+    border-left: 2px solid #fff;
+    width: 5px;
+    height: 5px;
+    transform: rotate(-45deg);
+}
+.application_form_title{
+    text-transform: uppercase;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 100%;
+}
+.application_form_title small{
+    text-transform: lowercase;
+}
+.group_name_phone{
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+.group_name_phone .main_btn{
+    margin-top: 20px;
+}
+.selectric{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 220px;
+    height: 100%;
+    background: #fff;
+}
+.selectric_items{
+    background-color: #fff;
+    transform: scaleY(0);
+}
+
+.select_transform{
+    transform: scaleY(1);
+}
+    
+
+
 /* end calc-section */
 
 
