--- a/src/css/style.css
+++ b/src/css/style.css
@@ -117,6 +117,7 @@ label a:hover{
 }
 .container{
     max-width: 1170px;
+    height: 100%;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -342,6 +343,9 @@ button {
     align-items: center;
     margin-bottom: 0;
 }
+.navigation_wrapp .nav_menu .is-active{
+    background-color: #00507f;
+}
 .navigation_wrapp .nav_item{
     padding: 16px;
     transition: background .35s;
@@ -370,6 +374,25 @@ button {
     background-position: 50% 0;
     position: relative;
     z-index: -1;
+}
+.banner_info_block{
+    width: 700px;
+    height: 360px;
+    background-color: #fff;
+    transform: skew(-20deg);
+}
+.border_info_block{
+    width: 95%;
+    height: 90%;
+    border: 2px dashed #ec004f;
+    margin-left: 2.5%;
+    margin-top: 2.5%;
+}
+.banner_flex_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 .dropdown-menu{
     position: absolute;
@@ -877,7 +900,140 @@ button {
     margin-left: 10px;
 }
 /* end stages_section */
-
+/* reviews_section */
+.reviews_section{
+    padding: 60px 0;
+}
+.review_section-title{
+    text-transform: none;
+    margin-bottom: 1em;
+  }
+  .reviews_section .reviwe_slider{
+    margin-top: 60px;
+  }
+  .reviwes_block{
+    padding: 25px 15px 0;
+    width: 332px;
+    height: 230px;
+    background-color: #edf7ff;
+    -webkit-box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
+    margin: 0 10px;
+    color: #00507f;
+  }
+  .reviwe-title{
+    font-weight: 600;
+    font-size: 14px;
+  }
+  .reviwe-title a{
+    border-bottom: 1px solid #919090;
+  }
+  
+  .reviwes_block .photo{
+     width: 50px;
+     height: 50px;
+     border-radius: 50%;
+  }
+  .star-img{
+     width: 18px;
+  }
+  .reviwe-text{
+    font-size: 16px;
+  }
+  .flex-stars{
+     display: flex;
+     margin-top: 5px;
+  }
+  .date-reviwe{
+     color: #00507f;
+  }
+  
+  .reviwe-header{
+     display: flex;
+     gap: 15px;
+     height: 65px;
+     margin-bottom: 20px;
+     align-items: center;
+  }
+  .overflow-block{
+     overflow: hidden;
+     height: 65px;
+     display: -webkit-box;
+     -webkit-line-clamp: 3;
+     -webkit-box-orient: vertical;
+  }
+  .read-compete{
+     color: #00507f;
+     font-size: 13px;
+     cursor: pointer;
+     transition: all .3s;
+  }
+  .read-compete:hover{
+    color: #ec004f;
+  }
+.reviwe_slider .slick-track{
+    justify-content: space-between;
+    padding: 10px 0;
+    align-items: flex-start;
+  }
+  .reviwe_slider .slick-disabled{
+    opacity: 0.4;
+  }
+  .reviwe_slider{
+    position: relative;
+    padding: 0 35px;
+     display: flex;
+     align-items: center;
+  }
+  .reviwe_slider .slick-arrow{
+    position: absolute;
+    font-size: 0;
+    width: calc(25px + 8*(100vw / 1440));
+    height: calc(25px + 8*(100vw / 1440));
+    cursor: pointer;
+    border: none;
+    z-index: 10;
+  }
+  .reviwe_slider .slick-prev{
+    background: url(/local/templates/vavisgroup/css/../img/icons/types/arrow.svg)0 0 / 100%;
+    background-repeat: no-repeat;
+    
+  }
+  .reviwe_slider .slick-next{
+    background-repeat: no-repeat;
+    background: url(/local/templates/vavisgroup/css/../img/icons/types/arrow.svg)0 0 / 100%;
+  
+  }
+  .reviwe_slider .slick-dots{
+    position: absolute;
+    bottom: -20px;
+  }
+  .reviwe_slider .slick-dots .slick-active{
+    border: 2px solid #AC9171;
+    background-color: #FFFFFF;
+  }
+  .reviwe_slider .slick-dots li{
+    background-color: #AC9171;
+    width: calc(6px + 4*(100vw / 1440));
+    height: calc(6px + 4*(100vw / 1440));
+  }
+  .reviwe_slider .slick-slide{
+   margin: 0 10px;
+  }
+  .link-reviwe{
+    margin-top: 15px;
+ }
+ .link-reviwe a{
+    color: #00507f;
+    font-size: 12px;
+    border-bottom: 1px solid #919090;
+    transition: all .3s;
+ }
+ .link-reviwe a:hover{
+    color: #ec004f;
+    border-bottom: none;
+ }
+/* end reviews_section */
 /* certificate_section */
 .certificate_section{
     padding: 60px 0;
@@ -984,7 +1140,7 @@ button {
 /* questions_section */
 .questions_section{
     padding: 60px 0;
-    margin-top: 60px;
+    /* margin-top: 60px; */
     background-color: #66b3e2;
 }
 .questions_section .section_title{
@@ -1177,12 +1333,89 @@ button {
     border: 2px solid #ec004f;
 }
 .map_contact_section{
+    display: flex;
+    justify-content: center;
     width: 900px;
     height: 300px;
     background-color: #fff;
     transform: skew(-20deg);
     border: 2px solid #ec004f;
     border-left: 2px transparent;
+}
+/* .map_contact_section::after{
+    content: '';
+    border: 2px dashed #00507f;
+    margin-left: 90px;
+} */
+.container_block_contact_map{
+    display: flex;
+    transform: skew(20deg);
+    gap: 70px;
+    padding: 50px 0;
+}
+.container_block_contact_map .social_media{
+    flex-direction: column;
+    gap: 13px;
+}
+.container_block_contact_map .social_media li a{
+    width: 35px;
+    height: 35px;
+    background-color: #00507f;
+    transition: all .3s;
+}
+.container_block_contact_map .social_media li a:hover{
+    background-color: #ec004f;
+}
+/* .block_contact{
+    padding: 50px 0;
+} */
+.block_contact img{
+    max-width: 30px;
+}
+.block_contact .flex_phone a{
+    color: #00507f;
+    font-size: 21px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    transition: all .3s;
+}
+.block_contact .flex_phone a:hover{
+    color: #ec004f;
+}
+.block_contact .number_phone img{
+    margin-bottom: 20px;
+}
+
+.block_contact .email{
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.block_contact .email a{
+    color: #00507f;
+    font-size: 21px;
+    font-weight: 500;
+    transition: all .3s;
+}
+.block_contact .email a:hover{
+    color: #ec004f;
+}
+.block_contact .block_address{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    color: #00507f;
+    font-size: 21px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+.block_contact .schedule{
+    display: flex;
+    gap: 20px;
+    color: #00507f;
+    font-size: 21px;
+    font-weight: 500;
+    margin-bottom: 20px;
 }
 
 .ymaps-2-1-79-map-copyrights-promo{
@@ -1214,6 +1447,7 @@ button {
    padding: 15px 10px 0 10px;
    max-width: 220px;
    flex: 20% 0 0;
+   white-space: nowrap;
 }
 .block_info{
     display: flex;
@@ -1244,7 +1478,7 @@ button {
 }
 .block_link{
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
 }
 .footer_menu_title{
