--- a/src/css/style.css
+++ b/src/css/style.css
@@ -344,8 +344,9 @@ button {
     margin-bottom: 0;
 }
 .navigation_wrapp .nav_menu .is-active{
-    background-color: #00507f;
+    color: #ec004f;
 }
+ 
 .navigation_wrapp .nav_item{
     padding: 16px;
     transition: background .35s;
@@ -982,8 +983,7 @@ button {
   .reviwe_slider{
     position: relative;
     padding: 0 35px;
-     display: flex;
-     align-items: center;
+    display: flex;
   }
   .reviwe_slider .slick-arrow{
     position: absolute;
@@ -1022,6 +1022,7 @@ button {
   }
   .link-reviwe{
     margin-top: 15px;
+    margin-bottom: 15px;
  }
  .link-reviwe a{
     color: #00507f;
@@ -1328,16 +1329,17 @@ button {
     position: absolute;
     width: 200px;
     height: 300px;
-    background-color: #fff;
+    background: rgb(255, 255, 255);
     left: -60px;
     border: 2px solid #ec004f;
+    border-right: 2px solid transparent;
 }
 .map_contact_section{
     display: flex;
     justify-content: center;
     width: 900px;
     height: 300px;
-    background-color: #fff;
+    background: rgb(255, 255, 255);
     transform: skew(-20deg);
     border: 2px solid #ec004f;
     border-left: 2px transparent;
@@ -1453,7 +1455,8 @@ button {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-right: 20px;
+    margin-right: 60px;
+    padding-top: 15px;
 }
 .block_info .social_media{
     margin: 20px 0;
@@ -1498,6 +1501,90 @@ button {
 }
 /* end footer_section */
 
+
+/* modal_section */
+.modal{
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+}
+.popup_content{
+    max-width: 700px;
+    background-color: #edf7ff;
+    border: 4px solid #00507f;
+    margin: auto;
+    transform: translate(0, 20%);
+    padding: 70px 50px;
+}
+.popup_content .section_title{
+    font-size: 28px;
+}
+.popup_content .section_title small{
+    font-size: 18px;
+}
+.popup_content .options_block{
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+}
+.popup_content .options_item{
+    color: #000;
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    align-items: flex-end;
+}
+.popup_content .form_group{
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
+}
+.popup_content .form_group .form_control{
+    padding-left: 15px;
+    width: 250px;
+}
+.close{
+    width: 20px;
+    height: 20px;
+    border: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.2rem;
+    transition: color .3s;
+    text-shadow: none;
+    cursor: pointer;
+    z-index: 20;
+}
+.close::before{
+    content: '\2573';
+    display: block;
+    color: #898787;
+    font-weight: 900;
+    font-size: 16px;
+}
+.popup_content .checkbox_label{
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+.popup_content .checkbox{
+    border: 1px solid #00507f;
+    top: -5px;
+}
+.popup_content .checkbox_text a{
+    color: #000;
+}
+.popup_content .main_btn{
+    display: block;
+    margin: 60px auto 0;
+}
+/* end modal_section */
 
 
 
